--- a/porfolio.html
+++ b/porfolio.html
@@ -20,9 +20,9 @@
             align-items: center;
         }
         header img {
-            width: 100px;  /* Increased image size */
-            height: 100px; /* Increased image size */
-            border-radius: 50%; /* Round the image */
+            width: 100px; 
+            height: 100px; 
+            border-radius: 50%; 
             margin-right: 20px;
         }
         header h1 {
@@ -51,8 +51,8 @@
            
         }
         .contact-info {
-            text-align: left; /* Move contact info to left */
-            padding-left: 20px; /* Add padding to left for spacing */
+            text-align: left; 
+            padding-left: 20px; 
         }
     </style>
     
