--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="contact">
         <h2 class="section-title">Contact</h2>
         <div class="contact-info">
-            <p>Email: merinthoms3043@gmail.com</p>
+            <p>Email: merinthomas3043@gmail.com</p>
             <p>Phone : 8547232811</p>
         </div>
     </div>
