--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         <h2 class="section-title">Certificates</h2>
         <ul class="certificates-list">
             <ul><strong>Social Network Analysis</strong> – NPTEL ( 50% )</ul>
+            <ul><strong>Introduction to Internet of Things</strong> – NPTEL ( 79% )</ul>
         </ul>
     </div>
 
